--- a/header.html
+++ b/header.html
@@ -42,7 +42,7 @@
                   <a class="nav-link" href="index.html">Ana Sayfa <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Servis</a>
+                  <a class="nav-link" href="service.html">Service</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> Hakkımızda</a>
@@ -50,9 +50,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">İletişim</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
-                </li>
+
                 <form class="form-inline">
                   <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
                     <i class="fa fa-search" aria-hidden="true"></i>
