--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/fevicon.png" type="">
+    <link rel="shortcut icon" href="images/our-yachting-favicon-color.png" type="">
 
-  <title> Carint </title>
+  <title> Our Yachting Services </title>
 
 
   <!-- bootstrap core css -->
@@ -91,9 +91,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">İLETİŞİM</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
-                </li>
+
                 <form class="form-inline">
                   <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
                     <i class="fa fa-search" aria-hidden="true"></i>
@@ -119,8 +117,8 @@
                 <div class="col-md-7 ">
                   <div class="detail-box">
                     <h1>
-                     Denizlerinize Değer Katıyoruz  <br>
-                     Tekne ve Yat Bakımında Uzman Çözümler
+                     DENİZLERİMİZE DEĞER KATIYORUZ <br>
+                     TEKNE VE YAT BAKIMLARINDA UZMAN ÇÖZÜMLER
                     </h1>
                     <p>
                      Tekne ve yatlarınız için tam kapsamlı bakım ve onarım hizmetleri sunuyoruz. Deneyimli ekibimiz, denizde güvenle seyir yapabilmeniz için ihtiyacınız olan tüm teknik desteği sağlar. Motor bakımından gövde yenilemeye kadar her adımda yanınızdayız.
@@ -141,8 +139,8 @@
                 <div class="col-md-7 ">
                   <div class="detail-box">
                     <h1>
-                     Deniz Tutkusunu Yaşayın<br>
-                    Gerisini Bize Bırakın
+                     DENİZ TUTKUSUNU YAŞAYIN<br>
+                   GERİSİNİ BİZE BIRAKIN
                     </h1>
                     <p>
             Teknelerinizi en iyi durumda tutmak bizim işimiz. Yat ve tekne bakımında profesyonel çözümlerimizle siz sadece denizin keyfini çıkarın, biz geriye kalan her şeyi halledelim.
@@ -163,8 +161,8 @@
                 <div class="col-md-7 ">
                   <div class="detail-box">
                     <h1>
-                   Denizde Güven <br>
-                     Bizimle Başlar
+                  DENİZDE GÜVEN <br>
+                    BİZİMLE BAŞLAR
                     </h1>
                 <p>
                   Tekne ve yatlarınız için uzman bakım, onarım ve yenileme çözümleri. Güvenli ve konforlu bir seyir için her detayı düşünüyoruz. İster rutin bakım ister acil onarım olsun, yanınızdayız.
@@ -200,26 +198,24 @@
       <div class="container ">
         <div class="heading_container">
           <h2>
-            Our <span>Services</span>
+       <span/>  HİZMETLERİMİZ</span>
           </h2>
           <p>
-            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+         Periyodik ve önleyici bakımlar,  pasta cila uygulamaları,  krom ve metal işlemleri, elektirik bakım ve onarım, ses müzik internet işlemleri
           </p>
         </div>
         <div class="row">
           <div class="col-md-6 ">
             <div class="box ">
               <div class="img-box">
-                <img src="images/s1.png" alt="">
+                <img src="images/our-yachting-favicon-color.png" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Air Transport
+                 Periyodik ve önleyici bakımlar
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                 Teknenizin sezona sorunsuz bir şekilde hazırlanabilmesi için periyodik bakımların düzenli yapılması büyük önem taşır. Uzman ekibimiz, teknenizin bakımını titizlikle gerçekleştirirken, olası arızaları da önceden tespit edip size detaylı rapor sunar. Bu işlemler, hem teknenizin ve ekipmanlarınızın ömrünü uzatır hem de işletim maliyetlerinizi düşürerek size uzun vadede kazanç sağlar.
                 </p>
                 <a href="">
                   Read More
@@ -230,16 +226,14 @@
           <div class="col-md-6 ">
             <div class="box ">
               <div class="img-box">
-                <img src="images/s2.png" alt="">
+                <img src="images/paint-spill.png" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Cargo Transport
+                Pasta cila uygulamaları
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                Deniz canlılarının etkisi, yanlış ürün kullanımı, UV ışınları ve tuzlu su, teknenizde kolayca deformasyonlara yol açabilir. Görünümünü yenilemek için boya işlemlerine ek olarak, pasta ve cila uygulamaları da yüksek verim almanın vazgeçilmez adımlarıdır. Profesyonel ekibimiz ve donanımlarımızla, teknenizi boyasına zarar vermeden kışın getirdiği kirlerden ve diğer tüm dış etkenlerden arındırıyoruz.  teknenizi güneşin ve denizin parıltısıyla yeniden buluşturuyoruz.
                 </p>
                 <a href="">
                   Read More
