--- a/service.html
+++ b/service.html
@@ -11,9 +11,9 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/fevicon.png" type="">
+    <link rel="shortcut icon" href="images/our-yachting-favicon-color.png" type="">
 
-  <title> Carint </title>
+  <title> Our Yachting Services </title>
 
 
   <!-- bootstrap core css -->
@@ -83,7 +83,7 @@
                   <a class="nav-link" href="index.html">Ana Sayfa <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Servis</a>
+                  <a class="nav-link" href="service.html">Service</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> Hakkımızda</a>
@@ -91,9 +91,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">İletişim</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
-                </li>
+
                 <form class="form-inline">
                   <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
                     <i class="fa fa-search" aria-hidden="true"></i>
